[package]
name = "semantic-text-splitter"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "semantic_text_splitter"
crate-type = ["cdylib"]

[dependencies]
auto_enums = "0.8.5"
pyo3 = { version = "0.21.2", features = ["abi3-py38"] }
text-splitter = { path = "../..", features = [
    "code",
    "markdown",
    "tiktoken-rs",
    "tokenizers",
] }
tiktoken-rs = "0.5.9"
tokenizers = { version = "0.19.1", default-features = false, features = [
    "onig",
] }
tree-sitter = "0.22.6"

[lints]
workspace = true
