[package]
name = "semantic-text-splitter"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "semantic_text_splitter"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["abi3-py39"] }
text-splitter = { path = "../..", features = [
    "code",
    "markdown",
    "tiktoken-rs",
    "tokenizers",
] }
tiktoken-rs = "0.6"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
tree-sitter = "0.24"

[lints]
workspace = true
