[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "semantic-text-splitter"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
test = [
    "pytest",
    "black",
    "mypy",
    "tokenizers",
    "tree-sitter",
    "tree-sitter-python@git+https://github.com/tree-sitter/tree-sitter-python",
]
docs = ["pdoc"]


[tool.maturin]
features = ["pyo3/extension-module"]
